@@ -6,7 +6,7 @@
 
     <groupId>sbs.immovablerod</groupId>
     <artifactId>metaDungeon</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
 
     <name>metaDungeon</name>
@@ -25,7 +25,7 @@
                 <version>3.13.0</version>
                 <configuration>
                     <source>21</source>
-                    <target>21</target><compilerArgs>--enable-preview</compilerArgs>
+                    <target>21</target><compilerArgs></compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -60,11 +60,14 @@
             <id>jackson</id>
             <url>https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core/</url>
         </repository>
-
         <repository>
             <id>codemc-repo</id>
             <url>https://repo.codemc.io/repository/maven-public/</url>
             <layout>default</layout>
+        </repository>
+        <repository>
+            <id>minebench-repo</id>
+            <url>https://repo.minebench.de/</url>
         </repository>
 
 
@@ -82,16 +85,10 @@
             <artifactId>jackson-core</artifactId>
             <version>2.20.0</version>
         </dependency>
-
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.20.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.50.3.0</version>
         </dependency>
         <dependency>
             <groupId>de.tr7zw</groupId>
@@ -100,9 +97,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-text</artifactId>
-            <version>1.14.0</version>
+            <groupId>de.themoep</groupId>
+            <artifactId>inventorygui</artifactId>
+            <!--The following version may not be the latest. Check it before using.-->
+            <version>1.6.6-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
